feat: add footer and images

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
         </pre>
       </section>
     </main>
+    <footer>
+      <a href="https://github.com/Vladislav-Fedurkin"><img class="icon" src="./assets/github.png" alt="github"></a>
+      <a href="https://vk.com/id202595560"><img class="icon" src="./assets/vk.png" alt="vk.com"></a>
+    </footer>
   </div>
 
 </body>
