--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
         <img class="avatar" src="./assets/avatar.jpg" alt="avatar">
         <div class="info">
           <h1 class="name">Vladislav Fedurkin</h1>
-          <div class="additional-info">
-            <span class="additional-info-item"><strong>Phone:</strong> +375296426412</span>
-            <span class="additional-info-item"><strong>E-mail:</strong> vladislav.fedurkin@gmail.com</span>
-            <span class="additional-info-item"><strong>Date of birth:</strong> 05.07.2003</span>
-            <div><br><em>A motivated student who wants to be a good specialist frontend developer.
+          <div>
+            <ul class="additional-info">
+              <li class="additional-info-item"><strong>Phone:</strong> +375296426412</li>
+              <li class="additional-info-item"><strong>E-mail:</strong> vladislav.fedurkin@gmail.com</li>
+              <li class="additional-info-item"><strong>Date of birth:</strong> 05.07.2003</li>
+            </ul>
+              <div>
+                <br><em>A motivated student who wants to be a good specialist frontend developer.
                 Has such qualities as: Diligence, Ability to work in a team, responsiveness,
                 responsibility.</em>
-            </div>
+              </div>
           </div>
         </div>
       </header>
