--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
         <ul>
           <li>
             01.08.2020-current time
+          </li>
           <li class="point">I started learning the HTML, CSS, JS, Git programming languagein September.No experience in
-            production.</li>
+            production.
           </li>
         </ul>
 
